# BAKOME-Viber-Bot

./: Cargo.toml  README.md  bakome_bot.db
src/: main.rs
