[package]
name = "bakome_viber_bot"
version = "5.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
tower-http = { version = "0.5", features = ["cors", "limit"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2"
